--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://g-k-shuvo.github.io/",
-  "name": "g-k-shuvo",
+  "homepage": "http://shahjalal-dev.github.io/",
+  "name": "shahjalal-dev",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
