--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
+    "deploy": "^1.0.3",
+    "netlify": "^13.1.2",
+    "netlify-cli": "^12.12.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
@@ -15,6 +18,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "save": "^2.9.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
